Tmux and hypr config

--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -10,6 +10,9 @@ set-option -g renumber-windows on
 
 set -g set-clipboard on
 set -g status-position top
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # Navigation
 bind h select-pane -L
